# meituan

./: .gitignore  README.md  launcher.py
ComWeChatBotClient/: pyproject.toml  test.py
ComWeChatBotClient/scripts/: set_version.py  wechat_version.py
ComWeChatBotClient/wechatbot_client/: __init__.py  config.py
ComWeChatBotClient/wechatbot_client/driver/: base.py
ComWeChatBotClient/wechatbot_client/file_manager/: manager.py
wechatbot/wechat/: .env.prod  README.md  pyproject.toml
wechatbot/wechat/src/core/: main.py
wechatbot/wechat/src/reply/: __init__.py
