[tool.poetry]
name = "myproject"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
filetype = "^1.2.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
comtypes = "^1.4.10"
loguru = "0.6.0"
pydantic = "^1.10.0"
multidict = "^6.1.0"
psutil = "^7.0.0"
msgpack = "^1.1.0"
apscheduler = "^3.11.0"
tortoise-orm = "^0.24.2"
fastapi = "^0.115.12"
pymem = "^1.14.0"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "primary"
