[project]
name = "wechat"
version = "0.1.0"
description = "wechat"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = []
plugin_dirs = ["src"]
builtin_plugins = ["echo"]

[tool.poetry.dependencies]
openai = "^1.98.0"
